--- a/assets/layouts/synth_polyphony.xml
+++ b/assets/layouts/synth_polyphony.xml
@@ -10,34 +10,10 @@
       <w>SCALE 0.864167</w>
       <h>ABS 24</h>
       <children>
-        <Layout name="num_voices_label" type="NORMAL">
-          <x>REL 0</x>
-          <y>REL 0</y>
-          <w>REL 225</w>
-          <h>SCALE 1.000000</h>
-          <children>
-          </children>
-        </Layout>
-        <Layout name="num_voices_slider" type="NORMAL">
-          <x>REL 225</x>
-          <y>REL 0</y>
-          <w>COMPLEMENT 1</w>
-          <h>SCALE 1.000000</h>
-          <children>
-          </children>
-        </Layout>
-      </children>
-    </Layout>
-    <Layout name="row" type="NORMAL">
-      <x>SCALE 0.046667</x>
-      <y>STACK 24</y>
-      <w>SCALE 0.864167</w>
-      <h>ABS 24</h>
-      <children>
         <Layout name="allow_voice_stealing_label" type="NORMAL">
           <x>REL 0</x>
           <y>REL 0</y>
-          <w>REL 225</w>
+          <w>REL 250</w>
           <h>SCALE 1.000000</h>
           <children>
           </children>
@@ -58,10 +34,42 @@
       <w>SCALE 0.864167</w>
       <h>ABS 24</h>
       <children>
+        <Layout name="num_voices_label" type="NORMAL">
+          <x>REL 0</x>
+          <y>REL 0</y>
+          <w>REL 250</w>
+          <h>SCALE 1.000000</h>
+          <children>
+          </children>
+        </Layout>
+        <Layout name="num_voices_slider" type="NORMAL">
+          <x>REL 250</x>
+          <y>REL 0</y>
+          <w>COMPLEMENT 1</w>
+          <h>SCALE 1.000000</h>
+          <children>
+          </children>
+        </Layout>
+      </children>
+    </Layout>
+    <Layout name="divider" type="NORMAL">
+      <x>SCALE 0.046667</x>
+      <y>STACK 32</y>
+      <w>SCALE 0.864167</w>
+      <h>ABS 0</h>
+      <children>
+      </children>
+    </Layout>
+    <Layout name="row" type="NORMAL">
+      <x>SCALE 0.046667</x>
+      <y>STACK 24</y>
+      <w>SCALE 0.864167</w>
+      <h>ABS 24</h>
+      <children>
         <Layout name="mono_mode_label" type="NORMAL">
           <x>REL 0</x>
           <y>REL 0</y>
-          <w>REL 225</w>
+          <w>REL 250</w>
           <h>SCALE 1.000000</h>
           <children>
           </children>
@@ -85,13 +93,13 @@
         <Layout name="portamento_len_label" type="NORMAL">
           <x>REL 0</x>
           <y>REL 0</y>
-          <w>REL 225</w>
+          <w>REL 250</w>
           <h>SCALE 1.000000</h>
           <children>
           </children>
         </Layout>
         <Layout name="portamento_len_slider" type="NORMAL">
-          <x>REL 225</x>
+          <x>REL 250</x>
           <y>REL 0</y>
           <w>COMPLEMENT 1</w>
           <h>SCALE 1.000000</h>
